added report apis
